# mixture-design-doe

./: .clinerules  .gitignore  CLEANUP_ANALYSIS.md  CLEANUP_PROGRESS.md  FIXED_PARTS_DISTRIBUTION_SOLUTION.md  INTEGRATED_PROPORTIONAL_PARTS_SOLUTION.md  PARTS_COLUMNS_FIX_SUMMARY.md  PROPORTIONAL_PARTS_MIXTURE_SOLUTION.md  README.md  SIMPLIFIED_MIGRATION_GUIDE.md  SOURCE_CODE_COLLECTION.md  __init__.py  _battle_out.txt  _econ_check.py  analyze_benchmark_deviation.py  analyze_jmp_design_direct.py  analyze_simplex_lattice_zeros.py  cleanup_project.py  compare_implementations.py  compare_mixture_approaches.py  debug_coordinate_exchange.py  debug_d_efficiency.py  debug_d_optimal_algorithm.py  debug_fixed_space.py  debug_init.py  debug_test.py  demo_flexible_runs.py  demonstrate_doptimal_issue.py  diagnose_false_positives.py  enhanced_mixture_designs.py  example_usage.py  final_test_complete_solution.py  final_verification_fixed_components.py  force_reload_streamlit.py  generate_hierarchical_function.py  investigate_d_efficiency_issue.py  investigate_parts_mode_issue.py  mixture_designs.py  optimal_doe_python.py  optimal_doe_r.R  (+59 more)
docs/: BATTLE_PLAN_17.md  FinalCheckList.md  FinalCheckList_audit.md  MCP_SETUP.md  REBUILD_SPEC.md  REBUILD_SPEC_15_6_economic_stop.md  REBUILD_SPEC_15_battle_augmentation.md  REBUILD_SPEC_17_campaign_flow.md  SESSION_15_6_handoff.md  SESSION_15_kickoff.md  SESSION_RECOVERY_1781951324130.md  SESSION_battle_handoff.md  anova_statistical_issues_analysis.md  false_positive_analysis.md  flexible_runs_summary.md  getting_started.md  hierarchical_function_findings.md  hierarchical_screening_approach.md  high_order_interaction_limitation.md  improvement_notes.md  jmp_advanced_screening_methods.md  (+6 more)
(+205 files in other folders)
